@@ -26,6 +26,10 @@
 #include <glade/glade.h>
 
 void
+run_action_dialog       (GUPnPServiceActionInfo         *action_info,
+                         GUPnPServiceProxy              *proxy,
+                         GUPnPServiceIntrospection      *introspection);
+void
 init_action_dialog      (void);
 
 #endif /* __GUPNP_UNIVERSAL_CP_ACTIONDIALOG_H__ */
